[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Fonts/font_72.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Fonts/font_152.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/LoadingPlayerPresentation.gd" type="Script" id=3]
[ext_resource path="res://Assets/UI/CharacterSelection/CharacterPanel1.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Buttons/CookieButtonPressed.png" type="Texture" id=5]
[ext_resource path="res://Objects/Wizards/Zak/ZakAvatar.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Buttons/CookieButton.png" type="Texture" id=7]
[ext_resource path="res://Objects/Wizards/Meg/MegAvatar.png" type="Texture" id=8]
[ext_resource path="res://Objects/Particles/FadedCircle.png" type="Texture" id=9]

[sub_resource type="Environment" id=10]
background_mode = 4
glow_enabled = true
glow_hdr_threshold = 1.5

[sub_resource type="Animation" id=4]
resource_name = "PlayerPresentationShow"
tracks/0/type = "value"
tracks/0/path = NodePath("Panels/PresentationPanel1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( -400, 0 ), Vector2( 318.51, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VSBar/Control/V:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( -96, 35 ), Vector2( 96, 35 ), Vector2( 80, 35 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VSBar/Control/S:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.6 ),
"transitions": PoolRealArray( 0.5, 1, 1 ),
"update": 0,
"values": [ Vector2( 360, 59 ), Vector2( 152, 59 ), Vector2( 168, 59 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VSBar/Control/V:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VSBar/Control/S:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VSBar/Line:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 2 ), Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Panels/PresentationPanel2:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1888, 0 ), Vector2( 1088, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Panels/PresentationPanel1/Holder:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 0.5, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Panels/PresentationPanel2/Holder:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 0.5, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1.1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("WhiteFlash:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 2, 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.54902 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panels/PresentationPanel1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -400, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VSBar/Control/V:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 24, 22 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VSBar/Control/S:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 166, 59 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VSBar/Control/V:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VSBar/Control/S:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Panels/PresentationPanel1/Holder:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.000976563, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("VSBar/Line:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Panels/PresentationPanel2:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1888, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Panels/PresentationPanel1/Holder:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Panels/PresentationPanel2/Holder:rect_size")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 450, 770 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Panels/PresentationPanel2/Holder:rect_scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("WhiteFlash:rect_position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("WhiteFlash:rect_size")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("WhiteFlash:color")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Curve" id=11]
min_value = -0.1
max_value = 0.1
_data = [ Vector2( 0, -0.1 ), 0.0, -0.0341641, 0, 0, Vector2( 1, 0.1 ), 0.0152162, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="Curve" id=13]
_data = [ Vector2( 0, 0 ), 0.0, 2.41983, 0, 0, Vector2( 0.52459, 1 ), -0.219508, -0.219508, 0, 0, Vector2( 1, 0 ), -2.2812, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 2
emission_box_extents = Vector3( 1, 300, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 60.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1000.0
initial_velocity_random = 0.58
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 1.0
orbit_velocity_curve = SubResource( 12 )
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
tangential_accel = 100.0
tangential_accel_random = 1.0
angle = 720.0
angle_random = 1.0
scale = 0.05
scale_random = 0.1
scale_curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]
emission_shape = 2
emission_box_extents = Vector3( 1, 300, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 60.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1500.0
initial_velocity_random = 0.7
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.1
orbit_velocity_random = 1.0
orbit_velocity_curve = SubResource( 12 )
linear_accel = 100.0
linear_accel_random = 1.0
radial_accel = 100.0
radial_accel_random = 1.0
tangential_accel = 100.0
tangential_accel_random = 1.0
angle = 720.0
angle_random = 1.0
scale = 0.05
scale_random = 0.1
scale_curve = SubResource( 14 )

[node name="PlayerPresentation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( 346, 155 )
color = Color( 0.129412, 0.129412, 0.129412, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Panels" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -500.0
margin_right = 960.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresentationPanel1" type="Control" parent="Panels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -1360.0
margin_top = -384.0
margin_right = -909.988
margin_bottom = 386.0
rect_pivot_offset = Vector2( 351, 402 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Holder" type="Control" parent="Panels/PresentationPanel1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.000976563
margin_right = 0.000976563
rect_pivot_offset = Vector2( 225, 385 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Panels/PresentationPanel1/Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerId" type="Label" parent="Panels/PresentationPanel1/Holder"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.516
margin_top = -162.0
margin_right = 38.484
margin_bottom = -94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "P1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panels/PresentationPanel1/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -167.0
margin_top = 56.0
margin_right = 169.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WizardTexture" type="TextureRect" parent="Panels/PresentationPanel1/Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresentationPanel2" type="Control" parent="Panels"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 928.0
margin_top = -384.0
margin_right = 1378.0
margin_bottom = 386.0
rect_pivot_offset = Vector2( 351, 402 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Holder" type="Control" parent="Panels/PresentationPanel2"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 225, 385 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="Panels/PresentationPanel2/Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerId" type="Label" parent="Panels/PresentationPanel2/Holder"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.9999
margin_top = -162.0
margin_right = 39.0001
margin_bottom = -94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "P2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Panels/PresentationPanel2/Holder"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -167.0
margin_top = 56.0
margin_right = 169.0
margin_bottom = 124.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "NAME"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WizardTexture" type="TextureRect" parent="Panels/PresentationPanel2/Holder"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSBar" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -331.0
margin_right = 960.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line" type="ColorRect" parent="VSBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = 3.0
margin_right = 184.0
margin_bottom = -118.0
rect_rotation = -2.61982
rect_pivot_offset = Vector2( 1100, 105 )
color = Color( 0, 0, 0, 0.780392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VSBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -165.5
margin_right = 192.0
margin_bottom = 45.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="Label" parent="VSBar/Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.0
margin_top = -83.5
margin_right = -74.0
margin_bottom = 57.5
custom_fonts/font = ExtResource( 2 )
text = "V"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="Label" parent="VSBar/Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -46.5
margin_right = 68.0009
margin_bottom = 94.5
custom_fonts/font = ExtResource( 2 )
text = "S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingBar" type="TextureProgress" parent="VSBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -64.0
margin_right = 960.0
margin_bottom = -24.0
step = 0.1
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
stretch_margin_left = 50
stretch_margin_right = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WhiteFlash" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "PlayerPresentationShow"
anims/PlayerPresentationShow = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="LeftParticles" type="Particles2D" parent="."]
modulate = Color( 13, 13, 13, 1 )
position = Vector2( 0, 528 )
amount = 30
lifetime = 3.0
process_material = SubResource( 15 )
texture = ExtResource( 9 )

[node name="RightParticles" type="Particles2D" parent="."]
modulate = Color( 13, 13, 13, 1 )
position = Vector2( 1920, 520 )
rotation = -3.14159
amount = 30
lifetime = 3.0
process_material = SubResource( 16 )
texture = ExtResource( 9 )
